/**
 * Copyright 2023-present DreamNum Co., Ltd.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

import { render } from '@testing-library/react';
import { describe, expect, it } from 'vitest';

import { ColorPicker } from '../ColorPicker';

describe('ColorPicker', () => {
    it('should render correctly', () => {
        const { container } = render(<ColorPicker />);

        expect(container).toMatchSnapshot();
    });

    it('should render with value', () => {
        const { container } = render(<ColorPicker value="#FF0000" />);

        expect(container).toMatchSnapshot();
    });

    it('should render with showAlpha', () => {
        const { container } = render(<ColorPicker showAlpha />);

        expect(container).toMatchSnapshot();
    });
});
